<resources>
    <string name="app_name">Notify</string>
    <string name="title_activity_map_nd_marker">MapNdMarker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyC-XVPPeB8weVnAOdWiugYGQhLW4h1_eH0 </string>
    <string name="title_home">Home</string>
    <string name="title_my">My Reports</string>
    <string name="title_browse">Browse Reports</string>
    <string name="title_report">Report Fire</string>
    <string name="title_weather">Check Weather</string>
    <string name="title_traffic">Check Traffic</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_join">Register</string>
    <string name="title_activity_map_nmarker">Register</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phone">Phone e.g 090000000</string>
    <string name="join">FINISH</string>
    <string name="choosePictures">Upload photo</string>
    <string name="sign_in">Login</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description">What happened? And how?</string>
    <string name="where">Where is it happening?</string>
    <string name="submit">SUBMIT</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">256b23f13d7494c300ccc648210fc563</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="change_city">Change city</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="search">Search</string>
    <string name="city">City e.g Lagos</string>

    <array name="placeTypes">
        <item>PlaceType</item>
        <item>Address</item>
        <item>Cities</item>
        <item>Establishment</item>
        <item>Geocode</item>
        <item>Regions</item>
        <item>All</item>
    </array>
    <array name="placeTypesValue">
        <item>0</item>
        <item>2</item>
        <item>5</item>
        <item>34</item>
        <item>1007</item>
        <item>4</item>
        <item>0</item>
    </array>
</resources>