<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/title_my" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_browse" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_problem_black_24dp"
            android:title="@string/title_report" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_ac_unit_black_24dp"
            android:title="@string/title_weather" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/title_login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_remove_circle_outline_black_24dp"
                android:title="@string/title_logout" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/title_join" />
        </menu>
    </item>

</menu>
