<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="charmingdev.d.notify.fragments.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_input"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:theme="@style/opensans_light"
            android:textSize="16sp"
            android:id="@+id/fname"
            android:hint="@string/firstname"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="text"
            android:drawablePadding="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_input"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:theme="@style/opensans_light"
            android:textSize="16sp"
            android:id="@+id/lname"
            android:hint="@string/lastname"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_input"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:theme="@style/opensans_light"
            android:textSize="16sp"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="phone"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"/>
        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_simple"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/choosePictures"
            android:textColor="@color/colorPlain"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_insert_photo_white_24dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:drawablePadding="10dp"
            android:textAlignment="textStart"
            android:drawableRight="@drawable/ic_add_white_24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_simple"
            android:padding="10dp"
            android:textAlignment="center"
            android:theme="@style/opensans_light"
            android:textSize="16sp"
            android:id="@+id/join"
            android:hint="@string/join"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPlain"
            android:inputType="phone"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loaded"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
