<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charmingdev.d.notify.CreateFireReports">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginTop="120dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_multiline"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:theme="@style/opensans_light"
                android:textSize="16sp"
                android:id="@+id/address"
                android:hint="@string/where"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_multiline"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:theme="@style/opensans_light"
                android:textSize="16sp"
                android:id="@+id/description"
                android:hint="@string/description"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textMultiLine"
                android:lines="20"
                android:minLines="5"
                android:textAlignment="textStart"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_simple"
                android:padding="10dp"
                android:textAlignment="center"
                android:theme="@style/opensans_light"
                android:textSize="16sp"
                android:id="@+id/submit"
                android:hint="@string/submit"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPlain"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/country_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nigeria"
                    android:visibility="invisible"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
